Rebuild the test sourceset on what the parity store actually pins, so a test's name says its subject and the store's own pointers stop naming files that moved
The suite had accumulated three kinds of drift the parity gate never catches, because
every gate here reads the shipped store rather than the tests that produce it.

PROBES THAT CANNOT FAIL. Four files in engine/kit held 22 @Test methods and five
assertions between them - PrecisionHuntTest, JomlSideBySideTest and
VanillaShadeReproductionTest asserted nothing at all, printing traces to stdout on every
./gradlew test. One of them built two all-zero identity chains, so it reported 0 ULPs for
any implementation whatsoever. Their two real contracts are re-authored with assertions as
tensor/Matrix4fTest, which is also the first coverage Matrix4f and Quaternionf have had.

NAMES THAT CITE A PHASE. Phase5PackSmokeTest, Phase6PackSmokeTest, Phase7PackSmokeTest,
Phase7LegacyMergeTest and Directive4GoldenPinsTest each named a scaffolding step rather
than a subject, which CLAUDE.md forbids in authored text and whose greps do not match.
The two pack smokes were migration scaffolding and merged into the integration test that
already acquires the identical stack; the rest are renamed for what they exercise. The 21
visual/Test* classes are JavaExec mains rather than tests, and 13 are renamed to *Driver
with their mainClass.set strings. bedCompare goes with them: its ground truth is an
untracked third-party checkout that is not on disk, so it exited 0 having written half its
matrix, and the block sweep covers those subjects against real vanilla ground truth.
packOverlay named a class deleted in f35cd0d0 and has been broken since.

WHAT NOTHING COVERED. engine/raster and engine/compose/layer had zero tests over 12 types.
LayerStack's ordering was entirely unasserted while its class doc and its method doc
disagreed about where append lands; the test pins the code, which is the method doc's
reading. Nineteen new classes close the